--- a/html/behavioral-patterns.html
+++ b/html/behavioral-patterns.html
@@ -27,13 +27,14 @@
 <div class="content">
 <h1>Behavioral Patterns</h1>
 <h1 class="book"><a href="/">Game Programming Patterns</a></h1>
-<p>Once you&#8217;ve built your game&#8217;s stage and decorated it with actors and props, all
-that remains is to start the scene. For this, you need behavior&#8202;&mdash;&#8202;the script
-that tells each entity in your game what to do.</p>
+<p>Once you&#8217;ve built your game&#8217;s set and festooned it with actors and props, all
+that remains is to start the scene. For this, you need behavior&#8202;&mdash;&#8202;the
+screenplay that tells each entity in your game what to do.</p>
 <p>Of course all code is &#8220;behavior&#8221;, and all software is defining behavior, but
 what&#8217;s different about games is often the <em>breadth</em> of it that you have to
 implement. While your word processor may have a long list of features, it pales
-next to the number of inhabitants, items, and quests in your average MMORPG.</p>
+next to the number of inhabitants, items, and quests in your average
+role-playing game.</p>
 <p>The patterns in this chapter help you define and refine a large quantity of
 behavior quickly, and maintainably. <a href="type-object.html">Type Objects</a> create
 categories of behavior without the rigidity of defining an actual class. A
