--- a/html/component.html
+++ b/html/component.html
@@ -937,7 +937,7 @@ href="event-queue.html" class="pattern">Event Queue</a>.</p>
 <aside name="mediator">
 
 <p>The Gang of Four call this the <a class="gof-pattern"
-href="http://c2.com/cgi-bin/wiki?MediatorPattern">Mediator Pattern</a>:
+href="http://c2.com/cgi-bin/wiki?MediatorPattern">Mediator</a> pattern:
 two or more objects communicate with each other indirectly by routing
 the message through an intermediate object. In this case, the container
 object itself is the mediator.</p>
