--- a/html/object-pool.html
+++ b/html/object-pool.html
@@ -698,7 +698,7 @@ the object exposes.</p>
 <ul>
 <li>
 <p>This looks a lot like the <a class="gof-pattern" href="flyweight.html">
-    Flyweight pattern</a>. Both maintain a collection of reusable objects. The
+    Flyweight</a> pattern. Both maintain a collection of reusable objects. The
     difference is what &#8220;reuse&#8221; means. Flyweight objects are reused by sharing
     the same instance between multiple owners <em>simultaneously</em>. It avoids
     <em>duplicate</em> memory usage by using the same object in multiple contexts.</p>
@@ -711,7 +711,7 @@ lifetime.</p>
 <li>
 <p>Packing a bunch of objects of the same type together in memory helps keep
     your CPU cache full as you iterate over those objects. The
-    <a class="pattern" href="data-locality.html">Data Locality pattern</a>
+    <a class="pattern" href="data-locality.html">Data Locality</a> pattern
     is all about that.</p>
 </li>
 </ul>
